[CRD iOS] Remove navigation bar shadow in the settings menu

Looks like a recent MaterialComponents rollout gives a shadow to the
navigation bar (its headerView to be precise) by default, which makes
our settings menu look weird.

This CL removes the shadow from the headerView by overriding it with a
zero elevation shadow layer.

Bug: 772578
Change-Id: I88cf0f3b49891167e98407bfc6ea642b93246246